# m_tg_utils

./: README.md  boilerplate_setup.py  configgen.py  pyproject.toml
m_tg_utils/: __init__.py  base.py  bot.py  configloader.py
